2005-08-03 10:41 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) reject
	ContinuousEquator or missing faces.

2005-08-03 10:19 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridThreadCurveThroughVolume) returns the next
	node along the curve, which is n1 if edge n0 n1 exists or newly
	inserted node that pierces the next opposite face.	
	* src/gridinsert.c (gridReconstructSplitEdgeRatio) collects a list
	of nodes and tuvs along the curve.

2005-08-02 14:57 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridThreadCurveThroughVolume) tries to move,
	split edge, split face to get the node in.

2005-08-02 13:53 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridCurveIntersectsFace) also returns the 
	barycentric coordinates of the point intersecting the face.

2005-08-02 11:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridCurveIntersectsFace) also returns the xyz of
	the intersection point.

2005-08-02 11:19 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSplitFaceAt) exended to allow an interior volume
	face to be split as well as a boundary face.

2005-08-02 09:04 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindOtherCellWith3Nodes) added extra test to
	ensure that the face nodes are not repeated.

2005-08-01 16:30 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitFaceAt) takes the three nodes of a
	triangle instead of the boundary face index to allow for extension
	to interior volume faces.

2005-08-01 14:50 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridTriangularBarycentricCoordinate3D) finds the
	barycentric coordinates of a point in the plane of a triangle.

2005-07-29 11:28 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridCurveIntersectsFace) started blank routine to
	find the curve on the way out of the opposite face orbit of a
	node.

2005-07-29 10:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFaceOppositeCellNode) returns an right handed